[package]
name = "gutils"
version = "0.1.0"
authors = ["Gurbakhshish Singh <gurbakhshish.s@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
config = "0.9.3"
serde_derive = "^1.0.8"
serde = "^1.0.8"